<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_of_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:hint="@string/title_recycler" />

        <TextView
            android:id="@+id/tv_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:hint="@string/student_recycler" />

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:hint="@string/subject_recycler" />

        <TextView
            android:id="@+id/tv_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:hint="@string/teacher_recycler" />

        <TextView
            android:id="@+id/tv_registration_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:hint="@string/registration_date" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>